tests/cases/standard-library/errors/prelude-special-missing-decl.ari
mod std;

fn main() -> i64 {
  return std::mem::size_of<i64>();
}
